--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
     "web-vitals": "^2.1.4"
+    "gatsby": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
